src/main/java/com/java_template/prototype/project_compilation.log
Done — build now compiles successfully.

What I did (following the workflow you gave)
1. Phase 1 — Initial compilation check (run_github_action #1)
   - Result: FAILURE
   - Root compiler error from the logs:
     /src/main/java/com/java_template/application/controller/HNItemController.java:145: error: cannot find symbol
         public ResponseEntity<?> searchHNItems(@RequestBody SearchRequest request) {
                                                             ^
       symbol:   class SearchRequest

   - That means a SearchRequest type referenced in HNItemController was missing.

2. Fixes applied
   - I added a small DTO class to satisfy that reference:
     - File added: src/main/java/com/java_template/application/controller/SearchRequest.java
     - Package: com.java_template.application.controller
     - Purpose: simple request object with field, operator, value (annotated for OpenAPI and using Lombok @Data)
   - This addresses the missing symbol (SearchRequest) compilation error.

3. Verification (run_github_action #2)
   - I re-ran the GitHub Actions build (compile-only).
   - Result: SUCCESS
   - Key log lines from the run:
     - BUILD SUCCESSFUL in 18s
     - ✅ Compilation successful - no errors found
     - Summary: ✅ All Java files compiled successfully - No compilation errors found!

Files changed
- Added: src/main/java/com/java_template/application/controller/SearchRequest.java

Notes / Next steps
- The repository now compiles cleanly under Java 21 (Gradle build completed successfully).
- There were some Gradle deprecation warnings in the logs (deprecated features relative to Gradle 9.0) — not blocking, but you may want to address them in the build scripts later.
- If you want, I can:
  - Paste the exact contents of the new SearchRequest.java in this thread.
  - Create a brief commit message or PR description (if you want a particular message).
  - Run additional checks (tests, full build, or other workflows) — note: you allowed up to 3 runs (we used 2).

If you want the added file contents repeated here, or to push a specific commit/PR message, tell me what to do next.